@startuml

namespace URI_MadnessDelivery {

class Joueurs{
    - listeJoueurs : List<Joueur>
    - actif : bool
    ---
    + Joueur identifierJoueur(string nom, string prenom)
    + void ajouterJoueur(Joueur joueur)
    + List<Joueur> getTousLesJoueurs()
}

class Joueur { 
    - id : uint
    - nom : string
    - prenom : string
    - niveaux : Niveaux
    ---
    + Joueur(uint id, string nom, string prenom)
    + string getNom()
    + string getPrenom()
    + uint getId()
    + double getMeilleurScorePourLevel(Level difficulte)
    + void enregistrerScore(Level niveau, Score score)
}

class Niveaux{
    - listeNiveaux : List<Niveau>
    ---
    + Niveaux()
    + Niveau getNiveau()
    + Niveau getNiveauParDifficulte(Level difficulte)
    + void ajouterNiveau(Niveau niveau)
    + bool existeNiveau(Level difficulte)
}

class Niveau{
    - difficulte : Level
    - scores : Scores
    - tempsLimite : int
    - nbMaisonsALivrer : int
    - maisonsALivrer : List<uint> // ID des maisons à livrer dans ce niveau
    ---
    + Niveau(Level difficulte)
    + Niveau(Level difficulte, Scores scores)
    + string getDifficulte()
    + Scores getScores()
    + int getTempsLimite()
    + int getNombreDeLivraisons()
    + void initialiserMaisonsALivrer(List<Maison> toutesLesMaisons)
}

class Scores{
    - listeScores : List<Score>
    ---
    + Scores()
    + Scores(Score score)
    + Score getScore()
    + double getMeilleurScore()
    + List<Score> getListeScore
    + void ajouterScore(Score score)
    + double calculerMoyenne()
    + Score getDernierScore()
}

class Score{
    - valeurScore : uint
    ---
    + Score(uint score)
    + uint getValeurScore()
}

enum Level{
    FACILE
    MOYEN
    DIFFICILE
}

class Maisons{
    - listeMaisons : List<Maison>
    ---
    + List<Maison> getToutesLesMaisons()
    + Maison getMaisonParId(uint id)
}

class Maison{
    - id : uint
    - position : Vector2
    - estALivrer : bool
    - aEteLivrer : bool
    ---
    + Maison(uint id)
    + Maison(uint id, Vector2 position)
    + uint getId()
    + Vector2 getPosition()
    + bool getEstAlivrer()
    + bool getAEteLivrer()
    + void livrer()
    + void setPosition(Vector2 position)
    + void setEstALivrer(bool estALivrer)
    + void setAEteLivrer(bool AEteLivre)
}

class Routes{
    - listeRoutes : List<Route>
    ---
    + List<Route> getToutesLesRoutes()
}

class Route{
    - position : Vector2
    - type : TypeRoute
    ---
    + Route(Vector2 position, TypeRoute type)
    + Vector2 getPosition()
    + TypeRoute getType()
}

enum TypeRoute{
    PASSAGEPIETON
    VIRAGE
    DROITE
    LIMITE
    GIRATOIRE
    DIRECTION3
}

class Livreur{
    - position : Vector2
    - direction : Vector2
    ---
    + Vector2 getPosition()
    + void setPosition(Vector2 position)
    + void deplacer(Direction direction)
    + void verifierLivraison(List<Maison> maisons)
}

enum Direction {
    HAUT
    BAS
    GAUCHE
    DROITE
}

class Obstacle{

}

class MadnessDelivery {
    - joueurs : Joueurs
    - maisons : Maisons
    - routes : Routes
    - livreur : Livreur
    ---
    + void demarrerJeu()
    + void afficherMenu()
    + void lancerNiveau(Joueur joueur, Level difficulte)
    + void verifierFinPartie()
    + void afficherResultats()
}

class Vector2 {
    - x : double
    - y : double
    ---
    + Vector2(double x, double y)
    + double getX()
    + double getY()
}


MadnessDelivery *-- "1" Joueurs
MadnessDelivery *-- "1" Maisons
MadnessDelivery *-- "1" Routes
MadnessDelivery *-- "1" Livreur

Joueurs *-- "0..*" Joueur
Maisons *-- "1..*" Maison
Routes *-- "1..*" Route

Joueur *-- "1" Niveaux
Niveaux *-- "0..*" Niveau
Niveau *-- "1" Scores
Scores *-- "0..*" Score


}
@enduml